--- a/construct/organizationapp/build.gradle
+++ b/construct/organizationapp/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.5'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.1.1'
+	id 'io.spring.dependency-management' version "1.1.0"
 	id 'java'
 	id 'idea'
 	id 'com.google.cloud.tools.jib' version '3.2.1'
@@ -8,8 +8,8 @@ plugins {
 dependencyManagement {
 
 	imports {
-		mavenBom 'org.springframework.boot:spring-boot-dependencies:2.7.5'
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.1'
+		mavenBom 'org.springframework.boot:spring-boot-dependencies:3.1.1'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.2'
 
 	}
 
@@ -38,14 +38,14 @@ repositories {
 
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 dependencies {
 	implementation project(path: ':construct:organizationlib')
 	testImplementation project(path: ':construct:organizationlib', configuration: 'tests')
-	implementation group: "com.onbelay.core", name: "obcore", version: "1.0.0"
-	testImplementation group: "com.onbelay.core", name: "obcoretest", version: "1.0.0", classifier: 'tests'
+	implementation group: "com.onbelay.core", name: "obcore", version: "2.1.0"
+	testImplementation group: "com.onbelay.core", name: "obcoretest", version: "2.1.0", classifier: 'tests'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
@@ -65,7 +65,8 @@ dependencies {
 	implementation group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	implementation group: "org.apache.commons", name: "commons-text", version: "1.+"
 
-	implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
+	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '11.2.3.jre17'
 
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
@@ -98,7 +99,7 @@ bootRun {
 
 
 jar {
-	baseName = 'OBOrganizationApp'
+	archiveBaseName = 'OBOrganizationApp'
 	version = '1.0.0-SNAPSHOT'
 	manifest {
 		attributes("Implementation-Title": "OBOrganizationApp", "Implementation-Version": "1.0", "Created-By": "OnBelay Consulting")
