--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.liquibase.gradle' version '2.0.3'
+	id 'org.liquibase.gradle' version '2.2.0'
 	id("maven-publish")
 }
 
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
 	liquibaseRuntime "org.liquibase:liquibase-core:4.3.5"
+	liquibaseRuntime 'info.picocli:picocli:4.6.1'
 	liquibaseRuntime 'org.postgresql:postgresql:42.2.8'
 }
 
