--- a/devoverlays/construct/organizationlib/src/test/resources/application-integrationtest.properties
+++ b/devoverlays/construct/organizationlib/src/test/resources/application-integrationtest.properties
@@ -3,9 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ob_organization_test
 spring.datasource.username=organization
 spring.datasource.password=organization
 spring.jackson.default-property-inclusion=NON_NULL
+spring.jpa.open-in-view=false
 spring.main.allow-bean-definition-overriding=true
 //spring.jpa.hibernate.use-new-id-generator-mappings=true
-//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=test
 
 spring.security.oauth2.client.provider.okta.issuer-uri=http://localhost:8080/realms/master
 spring.security.oauth2.client.provider.okta.token-uri=http://localhost:8080/realms/master/protocol/openid-connect/token
