--- a/.github/workflows/test_branch.yml
+++ b/.github/workflows/test_branch.yml
@@ -63,9 +63,12 @@ jobs:
         chmod +x gradlew
 
     - name: Copy overlays to support testing
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: copyAllOverlays
+      run: |
+        cp ./overlays/database/* ./database
+        rm  -rf ./construct/organizationlib/src/test/resources/*.properties
+        cp ./overlays/construct/organizationlib/src/test/resources/* ./construct/organizationlib/src/test/resources
+        rm -rf  ./construct/organizationapp/src/test/resources/*.properties
+        cp ./overlays/construct/organizationapp/src/test/resources/* ./construct/organizationapp/src/test/resources
 
     - name: run gradle deployNew
       run: |
