--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -33,7 +33,7 @@ jobs:
     
 
     runs-on: ubuntu-latest
-    container: gradle:jdk17-focal
+    container: gradle:jdk21
 
     # necessary for tagging.
     permissions: write-all
